--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".circle_members_map"
+            android:label="@string/title_activity_circle_members_map"></activity>
         <activity android:name=".showcirclecode" />
         <activity android:name=".home" />
         <activity android:name=".signup_screen" />
