--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,13 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".circle_members_map"
+            android:name=".Activity.circle_members_map"
             android:label="@string/title_activity_circle_members_map"></activity>
-        <activity android:name=".showcirclecode" />
-        <activity android:name=".home"/>
-        <activity android:name=".signup_screen" />
-        <activity android:name=".login_screen" />
-        <activity android:name=".MainActivity"
+        <activity android:name=".Activity.showcirclecode" />
+        <activity android:name=".Activity.home"/>
+        <activity android:name=".Activity.signup_screen" />
+        <activity android:name=".Activity.login_screen" />
+        <activity android:name=".Activity.MainActivity"
             android:theme="@style/SplashAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
